tests/snapshots/tokenize__static_local.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 1:1\nIdentifier(counter) at 1:5\n( at 1:12\n) at 1:13\n{ at 1:15\nstatic at 2:5\nint at 2:12\nIdentifier(count) at 2:16\n= at 2:22\nIntLiteral(0, None) at 2:24\n; at 2:25\nIdentifier(count) at 3:5\n= at 3:11\nIdentifier(count) at 3:13\n+ at 3:19\nIntLiteral(1, None) at 3:21\n; at 3:22\nreturn at 4:5\nIdentifier(count) at 4:12\n; at 4:17\n} at 5:1\nint at 7:1\nIdentifier(main) at 7:5\n( at 7:9\n) at 7:10\n{ at 7:12\nint at 8:5\nIdentifier(result) at 8:9\n; at 8:15\nIdentifier(counter) at 9:5\n( at 9:12\n) at 9:13\n; at 9:14\nIdentifier(counter) at 10:5\n( at 10:12\n) at 10:13\n; at 10:14\nIdentifier(result) at 11:5\n= at 11:12\nIdentifier(counter) at 11:14\n( at 11:21\n) at 11:22\n; at 11:23\nreturn at 12:5\nIdentifier(result) at 12:12\n; at 12:18\n} at 13:1\nEOF at 14:1\n"
stderr: ""
status: 0
