tests/snapshots/tokenize__stdio_test.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "typedef at 6:1\nunsigned at 6:9\nlong at 6:18\nIdentifier(size_t) at 6:23\n; at 6:29\ntypedef at 9:1\nstruct at 9:9\nIdentifier(_IO_FILE) at 9:16\nIdentifier(FILE) at 9:25\n; at 9:29\nextern at 24:1\nIdentifier(FILE) at 24:8\n* at 24:13\nIdentifier(stdin) at 24:14\n; at 24:19\nextern at 25:1\nIdentifier(FILE) at 25:8\n* at 25:13\nIdentifier(stdout) at 25:14\n; at 25:20\nextern at 26:1\nIdentifier(FILE) at 26:8\n* at 26:13\nIdentifier(stderr) at 26:14\n; at 26:20\nextern at 29:1\nIdentifier(FILE) at 29:8\n* at 29:13\nIdentifier(fopen) at 29:14\n( at 29:19\nconst at 29:20\nchar at 29:26\n* at 29:31\nIdentifier(filename) at 29:32\n, at 29:40\nconst at 29:42\nchar at 29:48\n* at 29:53\nIdentifier(mode) at 29:54\n) at 29:58\n; at 29:59\nextern at 30:1\nIdentifier(FILE) at 30:8\n* at 30:13\nIdentifier(freopen) at 30:14\n( at 30:21\nconst at 30:22\nchar at 30:28\n* at 30:33\nIdentifier(filename) at 30:34\n, at 30:42\nconst at 30:44\nchar at 30:50\n* at 30:55\nIdentifier(mode) at 30:56\n, at 30:60\nIdentifier(FILE) at 30:62\n* at 30:67\nIdentifier(stream) at 30:68\n) at 30:74\n; at 30:75\nextern at 31:1\nint at 31:8\nIdentifier(fclose) at 31:12\n( at 31:18\nIdentifier(FILE) at 31:19\n* at 31:24\nIdentifier(stream) at 31:25\n) at 31:31\n; at 31:32\nextern at 32:1\nint at 32:8\nIdentifier(fflush) at 32:12\n( at 32:18\nIdentifier(FILE) at 32:19\n* at 32:24\nIdentifier(stream) at 32:25\n) at 32:31\n; at 32:32\nextern at 33:1\nvoid at 33:8\nIdentifier(setbuf) at 33:13\n( at 33:19\nIdentifier(FILE) at 33:20\n* at 33:25\nIdentifier(stream) at 33:26\n, at 33:32\nchar at 33:34\n* at 33:39\nIdentifier(buf) at 33:40\n) at 33:43\n; at 33:44\nextern at 34:1\nint at 34:8\nIdentifier(setvbuf) at 34:12\n( at 34:19\nIdentifier(FILE) at 34:20\n* at 34:25\nIdentifier(stream) at 34:26\n, at 34:32\nchar at 34:34\n* at 34:39\nIdentifier(buf) at 34:40\n, at 34:43\nint at 34:45\nIdentifier(mode) at 34:49\n, at 34:53\nIdentifier(size_t) at 34:55\nIdentifier(size) at 34:62\n) at 34:66\n; at 34:67\nextern at 37:1\nint at 37:8\nIdentifier(fprintf) at 37:12\n( at 37:19\nIdentifier(FILE) at 37:20\n* at 37:25\nIdentifier(stream) at 37:26\n, at 37:32\nconst at 37:34\nchar at 37:40\n* at 37:45\nIdentifier(format) at 37:46\n, at 37:52\n... at 37:54\n) at 37:57\n; at 37:58\nextern at 38:1\nint at 38:8\nIdentifier(printf) at 38:12\n( at 38:18\nconst at 38:19\nchar at 38:25\n* at 38:30\nIdentifier(format) at 38:31\n, at 38:37\n... at 38:39\n) at 38:42\n; at 38:43\nextern at 39:1\nint at 39:8\nIdentifier(sprintf) at 39:12\n( at 39:19\nchar at 39:20\n* at 39:25\nIdentifier(str) at 39:26\n, at 39:29\nconst at 39:31\nchar at 39:37\n* at 39:42\nIdentifier(format) at 39:43\n, at 39:49\n... at 39:51\n) at 39:54\n; at 39:55\nextern at 40:1\nint at 40:8\nIdentifier(fscanf) at 40:12\n( at 40:18\nIdentifier(FILE) at 40:19\n* at 40:24\nIdentifier(stream) at 40:25\n, at 40:31\nconst at 40:33\nchar at 40:39\n* at 40:44\nIdentifier(format) at 40:45\n, at 40:51\n... at 40:53\n) at 40:56\n; at 40:57\nextern at 41:1\nint at 41:8\nIdentifier(scanf) at 41:12\n( at 41:17\nconst at 41:18\nchar at 41:24\n* at 41:29\nIdentifier(format) at 41:30\n, at 41:36\n... at 41:38\n) at 41:41\n; at 41:42\nextern at 42:1\nint at 42:8\nIdentifier(sscanf) at 42:12\n( at 42:18\nconst at 42:19\nchar at 42:25\n* at 42:30\nIdentifier(str) at 42:31\n, at 42:34\nconst at 42:36\nchar at 42:42\n* at 42:47\nIdentifier(format) at 42:48\n, at 42:54\n... at 42:56\n) at 42:59\n; at 42:60\nextern at 45:1\nint at 45:8\nIdentifier(fgetc) at 45:12\n( at 45:17\nIdentifier(FILE) at 45:18\n* at 45:23\nIdentifier(stream) at 45:24\n) at 45:30\n; at 45:31\nextern at 46:1\nchar at 46:8\n* at 46:13\nIdentifier(fgets) at 46:14\n( at 46:19\nchar at 46:20\n* at 46:25\nIdentifier(s) at 46:26\n, at 46:27\nint at 46:29\nIdentifier(size) at 46:33\n, at 46:37\nIdentifier(FILE) at 46:39\n* at 46:44\nIdentifier(stream) at 46:45\n) at 46:51\n; at 46:52\nextern at 47:1\nint at 47:8\nIdentifier(fputc) at 47:12\n( at 47:17\nint at 47:18\nIdentifier(c) at 47:22\n, at 47:23\nIdentifier(FILE) at 47:25\n* at 47:30\nIdentifier(stream) at 47:31\n) at 47:37\n; at 47:38\nextern at 48:1\nint at 48:8\nIdentifier(fputs) at 48:12\n( at 48:17\nconst at 48:18\nchar at 48:24\n* at 48:29\nIdentifier(s) at 48:30\n, at 48:31\nIdentifier(FILE) at 48:33\n* at 48:38\nIdentifier(stream) at 48:39\n) at 48:45\n; at 48:46\nextern at 49:1\nint at 49:8\nIdentifier(getc) at 49:12\n( at 49:16\nIdentifier(FILE) at 49:17\n* at 49:22\nIdentifier(stream) at 49:23\n) at 49:29\n; at 49:30\nextern at 50:1\nint at 50:8\nIdentifier(getchar) at 50:12\n( at 50:19\nvoid at 50:20\n) at 50:24\n; at 50:25\nextern at 51:1\nchar at 51:8\n* at 51:13\nIdentifier(gets) at 51:14\n( at 51:18\nchar at 51:19\n* at 51:24\nIdentifier(s) at 51:25\n) at 51:26\n; at 51:27\nextern at 52:1\nint at 52:8\nIdentifier(putc) at 52:12\n( at 52:16\nint at 52:17\nIdentifier(c) at 52:21\n, at 52:22\nIdentifier(FILE) at 52:24\n* at 52:29\nIdentifier(stream) at 52:30\n) at 52:36\n; at 52:37\nextern at 53:1\nint at 53:8\nIdentifier(putchar) at 53:12\n( at 53:19\nint at 53:20\nIdentifier(c) at 53:24\n) at 53:25\n; at 53:26\nextern at 54:1\nint at 54:8\nIdentifier(puts) at 54:12\n( at 54:16\nconst at 54:17\nchar at 54:23\n* at 54:28\nIdentifier(s) at 54:29\n) at 54:30\n; at 54:31\nextern at 55:1\nint at 55:8\nIdentifier(ungetc) at 55:12\n( at 55:18\nint at 55:19\nIdentifier(c) at 55:23\n, at 55:24\nIdentifier(FILE) at 55:26\n* at 55:31\nIdentifier(stream) at 55:32\n) at 55:38\n; at 55:39\nextern at 58:1\nIdentifier(size_t) at 58:8\nIdentifier(fread) at 58:15\n( at 58:20\nvoid at 58:21\n* at 58:26\nIdentifier(ptr) at 58:27\n, at 58:30\nIdentifier(size_t) at 58:32\nIdentifier(size) at 58:39\n, at 58:43\nIdentifier(size_t) at 58:45\nIdentifier(nmemb) at 58:52\n, at 58:57\nIdentifier(FILE) at 58:59\n* at 58:64\nIdentifier(stream) at 58:65\n) at 58:71\n; at 58:72\nextern at 59:1\nIdentifier(size_t) at 59:8\nIdentifier(fwrite) at 59:15\n( at 59:21\nconst at 59:22\nvoid at 59:28\n* at 59:33\nIdentifier(ptr) at 59:34\n, at 59:37\nIdentifier(size_t) at 59:39\nIdentifier(size) at 59:46\n, at 59:50\nIdentifier(size_t) at 59:52\nIdentifier(nmemb) at 59:59\n, at 59:64\nIdentifier(FILE) at 59:66\n* at 59:71\nIdentifier(stream) at 59:72\n) at 59:78\n; at 59:79\nextern at 62:1\nint at 62:8\nIdentifier(fseek) at 62:12\n( at 62:17\nIdentifier(FILE) at 62:18\n* at 62:23\nIdentifier(stream) at 62:24\n, at 62:30\nlong at 62:32\nIdentifier(offset) at 62:37\n, at 62:43\nint at 62:45\nIdentifier(whence) at 62:49\n) at 62:55\n; at 62:56\nextern at 63:1\nlong at 63:8\nIdentifier(ftell) at 63:13\n( at 63:18\nIdentifier(FILE) at 63:19\n* at 63:24\nIdentifier(stream) at 63:25\n) at 63:31\n; at 63:32\nextern at 64:1\nvoid at 64:8\nIdentifier(rewind) at 64:13\n( at 64:19\nIdentifier(FILE) at 64:20\n* at 64:25\nIdentifier(stream) at 64:26\n) at 64:32\n; at 64:33\nextern at 67:1\nvoid at 67:8\nIdentifier(clearerr) at 67:13\n( at 67:21\nIdentifier(FILE) at 67:22\n* at 67:27\nIdentifier(stream) at 67:28\n) at 67:34\n; at 67:35\nextern at 68:1\nint at 68:8\nIdentifier(feof) at 68:12\n( at 68:16\nIdentifier(FILE) at 68:17\n* at 68:22\nIdentifier(stream) at 68:23\n) at 68:29\n; at 68:30\nextern at 69:1\nint at 69:8\nIdentifier(ferror) at 69:12\n( at 69:18\nIdentifier(FILE) at 69:19\n* at 69:24\nIdentifier(stream) at 69:25\n) at 69:31\n; at 69:32\nextern at 70:1\nvoid at 70:8\nIdentifier(perror) at 70:13\n( at 70:19\nconst at 70:20\nchar at 70:26\n* at 70:31\nIdentifier(s) at 70:32\n) at 70:33\n; at 70:34\nextern at 73:1\nint at 73:8\nIdentifier(remove) at 73:12\n( at 73:18\nconst at 73:19\nchar at 73:25\n* at 73:30\nIdentifier(filename) at 73:31\n) at 73:39\n; at 73:40\nextern at 74:1\nint at 74:8\nIdentifier(rename) at 74:12\n( at 74:18\nconst at 74:19\nchar at 74:25\n* at 74:30\nIdentifier(oldname) at 74:31\n, at 74:38\nconst at 74:40\nchar at 74:46\n* at 74:51\nIdentifier(newname) at 74:52\n) at 74:59\n; at 74:60\nextern at 75:1\nIdentifier(FILE) at 75:8\n* at 75:13\nIdentifier(tmpfile) at 75:14\n( at 75:21\nvoid at 75:22\n) at 75:26\n; at 75:27\nextern at 76:1\nchar at 76:8\n* at 76:13\nIdentifier(tmpnam) at 76:14\n( at 76:20\nchar at 76:21\n* at 76:26\nIdentifier(s) at 76:27\n) at 76:28\n; at 76:29\nint at 79:1\nIdentifier(main) at 79:5\n( at 79:9\n) at 79:10\n{ at 79:12\nint at 80:5\nIdentifier(result) at 80:9\n= at 80:16\nIntLiteral(0, None) at 80:18\n; at 80:19\nIdentifier(putchar) at 83:5\n( at 83:12\nCharLiteral(65) at 83:13\n) at 83:16\n; at 83:17\nIdentifier(putchar) at 84:5\n( at 84:12\nCharLiteral(10) at 84:13\n) at 84:17\n; at 84:18\nIdentifier(result) at 85:5\n= at 85:12\nIdentifier(result) at 85:14\n+ at 85:21\nIntLiteral(1, None) at 85:23\n; at 85:24\nIdentifier(puts) at 88:5\n( at 88:9\nStringLiteral(\"Hello\") at 88:10\n) at 88:17\n; at 88:18\nIdentifier(result) at 89:5\n= at 89:12\nIdentifier(result) at 89:14\n+ at 89:21\nIntLiteral(1, None) at 89:23\n; at 89:24\nIdentifier(printf) at 92:5\n( at 92:11\nStringLiteral(\"Test\n\") at 92:12\n) at 92:20\n; at 92:21\nIdentifier(result) at 93:5\n= at 93:12\nIdentifier(result) at 93:14\n+ at 93:21\nIntLiteral(1, None) at 93:23\n; at 93:24\nif at 96:5\n( at 96:8\n( at 96:9\n- at 96:10\nIntLiteral(1, None) at 96:11\n) at 96:12\n== at 96:14\n- at 96:17\nIntLiteral(1, None) at 96:18\n) at 96:19\n{ at 96:21\nIdentifier(result) at 97:9\n= at 97:16\nIdentifier(result) at 97:18\n+ at 97:25\nIntLiteral(1, None) at 97:27\n; at 97:28\n} at 98:5\nif at 101:5\n( at 101:8\nIntLiteral(0, None) at 101:9\n== at 101:11\nIntLiteral(0, None) at 101:14\n&& at 101:16\nIntLiteral(1, None) at 101:19\n== at 101:21\nIntLiteral(1, None) at 101:24\n&& at 101:26\nIntLiteral(2, None) at 101:29\n== at 101:31\nIntLiteral(2, None) at 101:34\n) at 101:35\n{ at 101:37\nIdentifier(result) at 102:9\n= at 102:16\nIdentifier(result) at 102:18\n+ at 102:25\nIntLiteral(1, None) at 102:27\n; at 102:28\n} at 103:5\nreturn at 106:5\nIdentifier(result) at 106:12\n; at 106:18\n} at 107:1\nEOF at 108:1\n"
stderr: ""
status: 0
