tests/snapshots/tokenize__stdlib_function_pointers.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "typedef at 5:1\nunsigned at 5:9\nlong at 5:18\nIdentifier(size_t) at 5:23\n; at 5:29\ntypedef at 8:1\nint at 8:9\nIdentifier(wchar_t) at 8:13\n; at 8:20\nstruct at 17:1\nIdentifier(div_struct) at 17:8\n{ at 17:19\nint at 18:5\nIdentifier(quot) at 18:9\n; at 18:13\nint at 19:5\nIdentifier(rem) at 19:9\n; at 19:12\n} at 20:1\n; at 20:2\ntypedef at 21:1\nstruct at 21:9\nIdentifier(div_struct) at 21:16\nIdentifier(div_t) at 21:27\n; at 21:32\nstruct at 23:1\nIdentifier(ldiv_struct) at 23:8\n{ at 23:20\nlong at 24:5\nIdentifier(quot) at 24:10\n; at 24:14\nlong at 25:5\nIdentifier(rem) at 25:10\n; at 25:13\n} at 26:1\n; at 26:2\ntypedef at 27:1\nstruct at 27:9\nIdentifier(ldiv_struct) at 27:16\nIdentifier(ldiv_t) at 27:28\n; at 27:34\nextern at 30:1\ndouble at 30:8\nIdentifier(atof) at 30:15\n( at 30:19\nconst at 30:20\nchar at 30:26\n* at 30:31\nIdentifier(nptr) at 30:32\n) at 30:36\n; at 30:37\nextern at 31:1\nint at 31:8\nIdentifier(atoi) at 31:12\n( at 31:16\nconst at 31:17\nchar at 31:23\n* at 31:28\nIdentifier(nptr) at 31:29\n) at 31:33\n; at 31:34\nextern at 32:1\nlong at 32:8\nIdentifier(atol) at 32:13\n( at 32:17\nconst at 32:18\nchar at 32:24\n* at 32:29\nIdentifier(nptr) at 32:30\n) at 32:34\n; at 32:35\nextern at 33:1\ndouble at 33:8\nIdentifier(strtod) at 33:15\n( at 33:21\nconst at 33:22\nchar at 33:28\n* at 33:33\nIdentifier(nptr) at 33:34\n, at 33:38\nchar at 33:40\n* at 33:45\n* at 33:46\nIdentifier(endptr) at 33:47\n) at 33:53\n; at 33:54\nextern at 34:1\nlong at 34:8\nIdentifier(strtol) at 34:13\n( at 34:19\nconst at 34:20\nchar at 34:26\n* at 34:31\nIdentifier(nptr) at 34:32\n, at 34:36\nchar at 34:38\n* at 34:43\n* at 34:44\nIdentifier(endptr) at 34:45\n, at 34:51\nint at 34:53\nIdentifier(base) at 34:57\n) at 34:61\n; at 34:62\nextern at 35:1\nunsigned at 35:8\nlong at 35:17\nIdentifier(strtoul) at 35:22\n( at 35:29\nconst at 35:30\nchar at 35:36\n* at 35:41\nIdentifier(nptr) at 35:42\n, at 35:46\nchar at 35:48\n* at 35:53\n* at 35:54\nIdentifier(endptr) at 35:55\n, at 35:61\nint at 35:63\nIdentifier(base) at 35:67\n) at 35:71\n; at 35:72\nextern at 38:1\nint at 38:8\nIdentifier(rand) at 38:12\n( at 38:16\nvoid at 38:17\n) at 38:21\n; at 38:22\nextern at 39:1\nvoid at 39:8\nIdentifier(srand) at 39:13\n( at 39:18\nunsigned at 39:19\nint at 39:28\nIdentifier(seed) at 39:32\n) at 39:36\n; at 39:37\nextern at 42:1\nvoid at 42:8\n* at 42:13\nIdentifier(calloc) at 42:14\n( at 42:20\nIdentifier(size_t) at 42:21\nIdentifier(nmemb) at 42:28\n, at 42:33\nIdentifier(size_t) at 42:35\nIdentifier(size) at 42:42\n) at 42:46\n; at 42:47\nextern at 43:1\nvoid at 43:8\n* at 43:13\nIdentifier(malloc) at 43:14\n( at 43:20\nIdentifier(size_t) at 43:21\nIdentifier(size) at 43:28\n) at 43:32\n; at 43:33\nextern at 44:1\nvoid at 44:8\n* at 44:13\nIdentifier(realloc) at 44:14\n( at 44:21\nvoid at 44:22\n* at 44:27\nIdentifier(ptr) at 44:28\n, at 44:31\nIdentifier(size_t) at 44:33\nIdentifier(size) at 44:40\n) at 44:44\n; at 44:45\nextern at 45:1\nvoid at 45:8\nIdentifier(free) at 45:13\n( at 45:17\nvoid at 45:18\n* at 45:23\nIdentifier(ptr) at 45:24\n) at 45:27\n; at 45:28\nextern at 48:1\nvoid at 48:8\nIdentifier(abort) at 48:13\n( at 48:18\nvoid at 48:19\n) at 48:23\n; at 48:24\nextern at 49:1\nint at 49:8\nIdentifier(atexit) at 49:12\n( at 49:18\nvoid at 49:19\n( at 49:24\n* at 49:25\nIdentifier(func) at 49:26\n) at 49:30\n( at 49:31\nvoid at 49:32\n) at 49:36\n) at 49:37\n; at 49:38\nextern at 50:1\nvoid at 50:8\nIdentifier(exit) at 50:13\n( at 50:17\nint at 50:18\nIdentifier(status) at 50:22\n) at 50:28\n; at 50:29\nextern at 51:1\nchar at 51:8\n* at 51:13\nIdentifier(getenv) at 51:14\n( at 51:20\nconst at 51:21\nchar at 51:27\n* at 51:32\nIdentifier(name) at 51:33\n) at 51:37\n; at 51:38\nextern at 52:1\nint at 52:8\nIdentifier(system) at 52:12\n( at 52:18\nconst at 52:19\nchar at 52:25\n* at 52:30\nIdentifier(string) at 52:31\n) at 52:37\n; at 52:38\nextern at 55:1\nvoid at 55:8\n* at 55:13\nIdentifier(bsearch) at 55:14\n( at 55:21\nconst at 55:22\nvoid at 55:28\n* at 55:33\nIdentifier(key) at 55:34\n, at 55:37\nconst at 55:39\nvoid at 55:45\n* at 55:50\nIdentifier(base) at 55:51\n, at 55:55\nIdentifier(size_t) at 55:57\nIdentifier(nmemb) at 55:64\n, at 55:69\nIdentifier(size_t) at 55:71\nIdentifier(size) at 55:78\n, at 55:82\nint at 56:22\n( at 56:26\n* at 56:27\nIdentifier(compar) at 56:28\n) at 56:34\n( at 56:35\nconst at 56:36\nvoid at 56:42\n* at 56:47\n, at 56:48\nconst at 56:50\nvoid at 56:56\n* at 56:61\n) at 56:62\n) at 56:63\n; at 56:64\nextern at 57:1\nvoid at 57:8\nIdentifier(qsort) at 57:13\n( at 57:18\nvoid at 57:19\n* at 57:24\nIdentifier(base) at 57:25\n, at 57:29\nIdentifier(size_t) at 57:31\nIdentifier(nmemb) at 57:38\n, at 57:43\nIdentifier(size_t) at 57:45\nIdentifier(size) at 57:52\n, at 57:56\nint at 58:19\n( at 58:23\n* at 58:24\nIdentifier(compar) at 58:25\n) at 58:31\n( at 58:32\nconst at 58:33\nvoid at 58:39\n* at 58:44\n, at 58:45\nconst at 58:47\nvoid at 58:53\n* at 58:58\n) at 58:59\n) at 58:60\n; at 58:61\nextern at 61:1\nint at 61:8\nIdentifier(abs) at 61:12\n( at 61:15\nint at 61:16\nIdentifier(j) at 61:20\n) at 61:21\n; at 61:22\nextern at 62:1\nlong at 62:8\nIdentifier(labs) at 62:13\n( at 62:17\nlong at 62:18\nIdentifier(j) at 62:23\n) at 62:24\n; at 62:25\nextern at 63:1\nIdentifier(div_t) at 63:8\nIdentifier(div) at 63:14\n( at 63:17\nint at 63:18\nIdentifier(numer) at 63:22\n, at 63:27\nint at 63:29\nIdentifier(denom) at 63:33\n) at 63:38\n; at 63:39\nextern at 64:1\nIdentifier(ldiv_t) at 64:8\nIdentifier(ldiv) at 64:15\n( at 64:19\nlong at 64:20\nIdentifier(numer) at 64:25\n, at 64:30\nlong at 64:32\nIdentifier(denom) at 64:37\n) at 64:42\n; at 64:43\nextern at 67:1\nint at 67:8\nIdentifier(mblen) at 67:12\n( at 67:17\nconst at 67:18\nchar at 67:24\n* at 67:29\nIdentifier(s) at 67:30\n, at 67:31\nIdentifier(size_t) at 67:33\nIdentifier(n) at 67:40\n) at 67:41\n; at 67:42\nextern at 68:1\nint at 68:8\nIdentifier(mbtowc) at 68:12\n( at 68:18\nIdentifier(wchar_t) at 68:19\n* at 68:27\nIdentifier(pwc) at 68:28\n, at 68:31\nconst at 68:33\nchar at 68:39\n* at 68:44\nIdentifier(s) at 68:45\n, at 68:46\nIdentifier(size_t) at 68:48\nIdentifier(n) at 68:55\n) at 68:56\n; at 68:57\nextern at 69:1\nint at 69:8\nIdentifier(wctomb) at 69:12\n( at 69:18\nchar at 69:19\n* at 69:24\nIdentifier(s) at 69:25\n, at 69:26\nIdentifier(wchar_t) at 69:28\nIdentifier(wchar) at 69:36\n) at 69:41\n; at 69:42\nextern at 70:1\nIdentifier(size_t) at 70:8\nIdentifier(mbstowcs) at 70:15\n( at 70:23\nIdentifier(wchar_t) at 70:24\n* at 70:32\nIdentifier(pwcs) at 70:33\n, at 70:37\nconst at 70:39\nchar at 70:45\n* at 70:50\nIdentifier(s) at 70:51\n, at 70:52\nIdentifier(size_t) at 70:54\nIdentifier(n) at 70:61\n) at 70:62\n; at 70:63\nextern at 71:1\nIdentifier(size_t) at 71:8\nIdentifier(wcstombs) at 71:15\n( at 71:23\nchar at 71:24\n* at 71:29\nIdentifier(s) at 71:30\n, at 71:31\nconst at 71:33\nIdentifier(wchar_t) at 71:39\n* at 71:47\nIdentifier(pwcs) at 71:48\n, at 71:52\nIdentifier(size_t) at 71:54\nIdentifier(n) at 71:61\n) at 71:62\n; at 71:63\nstatic at 74:1\nint at 74:8\nIdentifier(called) at 74:12\n= at 74:19\nIntLiteral(0, None) at 74:21\n; at 74:22\nvoid at 76:1\nIdentifier(mark) at 76:6\n( at 76:10\nvoid at 76:11\n) at 76:15\n{ at 76:17\nIdentifier(called) at 76:19\n= at 76:26\nIntLiteral(1, None) at 76:28\n; at 76:29\n} at 76:31\nint at 78:1\nIdentifier(compare) at 78:5\n( at 78:12\nconst at 78:13\nvoid at 78:19\n* at 78:24\nIdentifier(a) at 78:25\n, at 78:26\nconst at 78:28\nvoid at 78:34\n* at 78:39\nIdentifier(b) at 78:40\n) at 78:41\n{ at 78:43\nint at 79:3\nIdentifier(av) at 79:7\n= at 79:10\n* at 79:12\n( at 79:13\nint at 79:14\n* at 79:18\n) at 79:19\nIdentifier(a) at 79:20\n; at 79:21\nint at 80:3\nIdentifier(bv) at 80:7\n= at 80:10\n* at 80:12\n( at 80:13\nint at 80:14\n* at 80:18\n) at 80:19\nIdentifier(b) at 80:20\n; at 80:21\nif at 82:3\n( at 82:6\nIdentifier(av) at 82:7\n< at 82:10\nIdentifier(bv) at 82:12\n) at 82:14\n{ at 82:16\nreturn at 83:5\n- at 83:12\nIntLiteral(1, None) at 83:13\n; at 83:14\n} at 84:3\nif at 85:3\n( at 85:6\nIdentifier(av) at 85:7\n> at 85:10\nIdentifier(bv) at 85:12\n) at 85:14\n{ at 85:16\nreturn at 86:5\nIntLiteral(1, None) at 86:12\n; at 86:13\n} at 87:3\nreturn at 88:3\nIntLiteral(0, None) at 88:10\n; at 88:11\n} at 89:1\nint at 91:1\nIdentifier(main) at 91:5\n( at 91:9\n) at 91:10\n{ at 91:12\nint at 92:3\nIdentifier(arr) at 92:7\n[ at 92:10\nIntLiteral(3, None) at 92:11\n] at 92:12\n= at 92:14\n{ at 92:16\nIntLiteral(3, None) at 92:17\n, at 92:18\nIntLiteral(1, None) at 92:20\n, at 92:21\nIntLiteral(2, None) at 92:23\n} at 92:24\n; at 92:25\nint at 93:3\nIdentifier(key) at 93:7\n= at 93:11\nIntLiteral(2, None) at 93:13\n; at 93:14\nif at 95:3\n( at 95:6\nIdentifier(atexit) at 95:7\n( at 95:13\nIdentifier(mark) at 95:14\n) at 95:18\n!= at 95:20\nIntLiteral(0, None) at 95:23\n) at 95:24\n{ at 95:26\nreturn at 96:5\nIntLiteral(1, None) at 96:12\n; at 96:13\n} at 97:3\nIdentifier(qsort) at 99:5\n( at 99:10\nIdentifier(arr) at 99:11\n, at 99:14\nIntLiteral(3, None) at 99:16\n, at 99:17\nsizeof at 99:19\n( at 99:25\nint at 99:26\n) at 99:29\n, at 99:30\nIdentifier(compare) at 99:32\n) at 99:39\n; at 99:40\nif at 100:3\n( at 100:6\nIdentifier(arr) at 100:7\n[ at 100:10\nIntLiteral(0, None) at 100:11\n] at 100:12\n!= at 100:14\nIntLiteral(1, None) at 100:17\n|| at 100:19\nIdentifier(arr) at 100:22\n[ at 100:25\nIntLiteral(1, None) at 100:26\n] at 100:27\n!= at 100:29\nIntLiteral(2, None) at 100:32\n|| at 100:34\nIdentifier(arr) at 100:37\n[ at 100:40\nIntLiteral(2, None) at 100:41\n] at 100:42\n!= at 100:44\nIntLiteral(3, None) at 100:47\n) at 100:48\n{ at 100:50\nreturn at 101:5\nIntLiteral(2, None) at 101:12\n; at 101:13\n} at 102:3\nint at 104:5\n* at 104:9\nIdentifier(found) at 104:10\n= at 104:16\nIdentifier(bsearch) at 104:18\n( at 104:25\n& at 104:26\nIdentifier(key) at 104:27\n, at 104:30\nIdentifier(arr) at 104:32\n, at 104:35\nIntLiteral(3, None) at 104:37\n, at 104:38\nsizeof at 104:40\n( at 104:46\nint at 104:47\n) at 104:50\n, at 104:51\nIdentifier(compare) at 104:53\n) at 104:60\n; at 104:61\nif at 105:3\n( at 105:6\n! at 105:7\nIdentifier(found) at 105:8\n|| at 105:14\n* at 105:17\nIdentifier(found) at 105:18\n!= at 105:24\nIntLiteral(2, None) at 105:27\n) at 105:28\n{ at 105:30\nreturn at 106:5\nIntLiteral(3, None) at 106:12\n; at 106:13\n} at 107:3\nif at 109:3\n( at 109:6\nIdentifier(called) at 109:7\n!= at 109:14\nIntLiteral(0, None) at 109:17\n) at 109:18\n{ at 109:20\nreturn at 110:5\nIntLiteral(4, None) at 110:12\n; at 110:13\n} at 111:3\nreturn at 113:3\nIntLiteral(0, None) at 113:10\n; at 113:11\n} at 114:1\nEOF at 115:1\n"
stderr: ""
status: 0
