tests/snapshots/tokenize__stdlib_memory.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 2:1\nIdentifier(printf) at 2:5\n( at 2:11\nchar at 2:12\n* at 2:17\nIdentifier(fmt) at 2:18\n, at 2:21\n... at 2:23\n) at 2:26\n; at 2:27\nvoid at 3:1\n* at 3:6\nIdentifier(malloc) at 3:7\n( at 3:13\nunsigned at 3:14\nlong at 3:23\nIdentifier(size) at 3:28\n) at 3:32\n; at 3:33\nvoid at 4:1\nIdentifier(free) at 4:6\n( at 4:10\nvoid at 4:11\n* at 4:16\nIdentifier(ptr) at 4:17\n) at 4:20\n; at 4:21\nvoid at 5:1\n* at 5:6\nIdentifier(calloc) at 5:7\n( at 5:13\nunsigned at 5:14\nlong at 5:23\nIdentifier(nmemb) at 5:28\n, at 5:33\nunsigned at 5:35\nlong at 5:44\nIdentifier(size) at 5:49\n) at 5:53\n; at 5:54\nvoid at 6:1\n* at 6:6\nIdentifier(memcpy) at 6:7\n( at 6:13\nvoid at 6:14\n* at 6:19\nIdentifier(dest) at 6:20\n, at 6:24\nvoid at 6:26\n* at 6:31\nIdentifier(src) at 6:32\n, at 6:35\nunsigned at 6:37\nlong at 6:46\nIdentifier(n) at 6:51\n) at 6:52\n; at 6:53\nvoid at 7:1\n* at 7:6\nIdentifier(memset) at 7:7\n( at 7:13\nvoid at 7:14\n* at 7:19\nIdentifier(s) at 7:20\n, at 7:21\nint at 7:23\nIdentifier(c) at 7:27\n, at 7:28\nunsigned at 7:30\nlong at 7:39\nIdentifier(n) at 7:44\n) at 7:45\n; at 7:46\nint at 9:1\nIdentifier(main) at 9:5\n( at 9:9\n) at 9:10\n{ at 9:12\nint at 11:5\n* at 11:9\nIdentifier(ptr1) at 11:10\n= at 11:15\nIdentifier(malloc) at 11:17\n( at 11:23\nIntLiteral(4, None) at 11:24\n) at 11:25\n; at 11:26\n* at 12:5\nIdentifier(ptr1) at 12:6\n= at 12:11\nIntLiteral(42, None) at 12:13\n; at 12:15\nIdentifier(printf) at 13:5\n( at 13:11\nStringLiteral(\"malloc test: %d\n\") at 13:12\n, at 13:31\n* at 13:33\nIdentifier(ptr1) at 13:34\n) at 13:38\n; at 13:39\nIdentifier(free) at 14:5\n( at 14:9\nIdentifier(ptr1) at 14:10\n) at 14:14\n; at 14:15\nint at 17:5\n* at 17:9\nIdentifier(ptr2) at 17:10\n= at 17:15\nIdentifier(calloc) at 17:17\n( at 17:23\nIntLiteral(3, None) at 17:24\n, at 17:25\nIntLiteral(4, None) at 17:27\n) at 17:28\n; at 17:29\nIdentifier(printf) at 18:5\n( at 18:11\nStringLiteral(\"calloc test: %d %d %d\n\") at 18:12\n, at 18:37\nIdentifier(ptr2) at 18:39\n[ at 18:43\nIntLiteral(0, None) at 18:44\n] at 18:45\n, at 18:46\nIdentifier(ptr2) at 18:48\n[ at 18:52\nIntLiteral(1, None) at 18:53\n] at 18:54\n, at 18:55\nIdentifier(ptr2) at 18:57\n[ at 18:61\nIntLiteral(2, None) at 18:62\n] at 18:63\n) at 18:64\n; at 18:65\nIdentifier(ptr2) at 19:5\n[ at 19:9\nIntLiteral(0, None) at 19:10\n] at 19:11\n= at 19:13\nIntLiteral(10, None) at 19:15\n; at 19:17\nIdentifier(ptr2) at 20:5\n[ at 20:9\nIntLiteral(1, None) at 20:10\n] at 20:11\n= at 20:13\nIntLiteral(20, None) at 20:15\n; at 20:17\nIdentifier(ptr2) at 21:5\n[ at 21:9\nIntLiteral(2, None) at 21:10\n] at 21:11\n= at 21:13\nIntLiteral(30, None) at 21:15\n; at 21:17\nIdentifier(printf) at 22:5\n( at 22:11\nStringLiteral(\"calloc after assignment: %d %d %d\n\") at 22:12\n, at 22:49\nIdentifier(ptr2) at 22:51\n[ at 22:55\nIntLiteral(0, None) at 22:56\n] at 22:57\n, at 22:58\nIdentifier(ptr2) at 22:60\n[ at 22:64\nIntLiteral(1, None) at 22:65\n] at 22:66\n, at 22:67\nIdentifier(ptr2) at 22:69\n[ at 22:73\nIntLiteral(2, None) at 22:74\n] at 22:75\n) at 22:76\n; at 22:77\nIdentifier(free) at 23:5\n( at 23:9\nIdentifier(ptr2) at 23:10\n) at 23:14\n; at 23:15\nint at 26:5\nIdentifier(src) at 26:9\n[ at 26:12\nIntLiteral(3, None) at 26:13\n] at 26:14\n; at 26:15\nIdentifier(src) at 27:5\n[ at 27:8\nIntLiteral(0, None) at 27:9\n] at 27:10\n= at 27:12\nIntLiteral(100, None) at 27:14\n; at 27:17\nIdentifier(src) at 28:5\n[ at 28:8\nIntLiteral(1, None) at 28:9\n] at 28:10\n= at 28:12\nIntLiteral(200, None) at 28:14\n; at 28:17\nIdentifier(src) at 29:5\n[ at 29:8\nIntLiteral(2, None) at 29:9\n] at 29:10\n= at 29:12\nIntLiteral(300, None) at 29:14\n; at 29:17\nint at 30:5\nIdentifier(dest) at 30:9\n[ at 30:13\nIntLiteral(3, None) at 30:14\n] at 30:15\n; at 30:16\nIdentifier(memcpy) at 31:5\n( at 31:11\nIdentifier(dest) at 31:12\n, at 31:16\nIdentifier(src) at 31:18\n, at 31:21\nIntLiteral(12, None) at 31:23\n) at 31:25\n; at 31:26\nIdentifier(printf) at 32:5\n( at 32:11\nStringLiteral(\"memcpy test: %d %d %d\n\") at 32:12\n, at 32:37\nIdentifier(dest) at 32:39\n[ at 32:43\nIntLiteral(0, None) at 32:44\n] at 32:45\n, at 32:46\nIdentifier(dest) at 32:48\n[ at 32:52\nIntLiteral(1, None) at 32:53\n] at 32:54\n, at 32:55\nIdentifier(dest) at 32:57\n[ at 32:61\nIntLiteral(2, None) at 32:62\n] at 32:63\n) at 32:64\n; at 32:65\nchar at 35:5\nIdentifier(buffer) at 35:10\n[ at 35:16\nIntLiteral(10, None) at 35:17\n] at 35:19\n; at 35:20\nIdentifier(memset) at 36:5\n( at 36:11\nIdentifier(buffer) at 36:12\n, at 36:18\nIntLiteral(65, None) at 36:20\n, at 36:22\nIntLiteral(5, None) at 36:24\n) at 36:25\n; at 36:26\nIdentifier(buffer) at 37:5\n[ at 37:11\nIntLiteral(5, None) at 37:12\n] at 37:13\n= at 37:15\nIntLiteral(0, None) at 37:17\n; at 37:18\nIdentifier(printf) at 38:5\n( at 38:11\nStringLiteral(\"memset test: %s\n\") at 38:12\n, at 38:31\nIdentifier(buffer) at 38:33\n) at 38:39\n; at 38:40\nIdentifier(printf) at 40:5\n( at 40:11\nStringLiteral(\"All memory tests passed!\n\") at 40:12\n) at 40:40\n; at 40:41\nreturn at 41:5\nIntLiteral(0, None) at 41:12\n; at 41:13\n} at 42:1\nEOF at 43:1\n"
stderr: ""
status: 0
