tests/snapshots/tokenize__stdlib_printf.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 2:1\nIdentifier(printf) at 2:5\n( at 2:11\nchar at 2:12\n* at 2:17\nIdentifier(fmt) at 2:18\n, at 2:21\n... at 2:23\n) at 2:26\n; at 2:27\nint at 3:1\nIdentifier(sprintf) at 3:5\n( at 3:12\nchar at 3:13\n* at 3:18\nIdentifier(buf) at 3:19\n, at 3:22\nchar at 3:24\n* at 3:29\nIdentifier(fmt) at 3:30\n, at 3:33\n... at 3:35\n) at 3:38\n; at 3:39\nint at 5:1\nIdentifier(main) at 5:5\n( at 5:9\n) at 5:10\n{ at 5:12\nIdentifier(printf) at 7:5\n( at 7:11\nStringLiteral(\"Hello, World!\n\") at 7:12\n) at 7:29\n; at 7:30\nIdentifier(printf) at 10:5\n( at 10:11\nStringLiteral(\"Number: %d\n\") at 10:12\n, at 10:26\nIntLiteral(42, None) at 10:28\n) at 10:30\n; at 10:31\nIdentifier(printf) at 11:5\n( at 11:11\nStringLiteral(\"Negative: %d\n\") at 11:12\n, at 11:28\n- at 11:30\nIntLiteral(10, None) at 11:31\n) at 11:33\n; at 11:34\nIdentifier(printf) at 14:5\n( at 14:11\nStringLiteral(\"Sum: %d + %d = %d\n\") at 14:12\n, at 14:33\nIntLiteral(10, None) at 14:35\n, at 14:37\nIntLiteral(20, None) at 14:39\n, at 14:41\nIntLiteral(30, None) at 14:43\n) at 14:45\n; at 14:46\nchar at 17:5\nIdentifier(buffer) at 17:10\n[ at 17:16\nIntLiteral(100, None) at 17:17\n] at 17:20\n; at 17:21\nIdentifier(sprintf) at 18:5\n( at 18:12\nIdentifier(buffer) at 18:13\n, at 18:19\nStringLiteral(\"Value: %d\") at 18:21\n, at 18:32\nIntLiteral(123, None) at 18:34\n) at 18:37\n; at 18:38\nIdentifier(printf) at 19:5\n( at 19:11\nStringLiteral(\"sprintf result: %s\n\") at 19:12\n, at 19:34\nIdentifier(buffer) at 19:36\n) at 19:42\n; at 19:43\nreturn at 22:5\nIntLiteral(0, None) at 22:12\n; at 22:13\n} at 23:1\nEOF at 24:1\n"
stderr: ""
status: 0
