tests/snapshots/tokenize__stdlib_string.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 2:1\nIdentifier(printf) at 2:5\n( at 2:11\nchar at 2:12\n* at 2:17\nIdentifier(fmt) at 2:18\n, at 2:21\n... at 2:23\n) at 2:26\n; at 2:27\nint at 3:1\nIdentifier(strlen) at 3:5\n( at 3:11\nchar at 3:12\n* at 3:17\nIdentifier(s) at 3:18\n) at 3:19\n; at 3:20\nchar at 4:1\n* at 4:6\nIdentifier(strcpy) at 4:7\n( at 4:13\nchar at 4:14\n* at 4:19\nIdentifier(dest) at 4:20\n, at 4:24\nchar at 4:26\n* at 4:31\nIdentifier(src) at 4:32\n) at 4:35\n; at 4:36\nint at 5:1\nIdentifier(strcmp) at 5:5\n( at 5:11\nchar at 5:12\n* at 5:17\nIdentifier(s1) at 5:18\n, at 5:20\nchar at 5:22\n* at 5:27\nIdentifier(s2) at 5:28\n) at 5:30\n; at 5:31\nchar at 6:1\n* at 6:6\nIdentifier(strcat) at 6:7\n( at 6:13\nchar at 6:14\n* at 6:19\nIdentifier(dest) at 6:20\n, at 6:24\nchar at 6:26\n* at 6:31\nIdentifier(src) at 6:32\n) at 6:35\n; at 6:36\nint at 8:1\nIdentifier(main) at 8:5\n( at 8:9\n) at 8:10\n{ at 8:12\nchar at 10:5\n* at 10:10\nIdentifier(str1) at 10:11\n= at 10:16\nStringLiteral(\"Hello\") at 10:18\n; at 10:25\nint at 11:5\nIdentifier(len) at 11:9\n= at 11:13\nIdentifier(strlen) at 11:15\n( at 11:21\nIdentifier(str1) at 11:22\n) at 11:26\n; at 11:27\nIdentifier(printf) at 12:5\n( at 12:11\nStringLiteral(\"strlen(\"%s\") = %d\n\") at 12:12\n, at 12:35\nIdentifier(str1) at 12:37\n, at 12:41\nIdentifier(len) at 12:43\n) at 12:46\n; at 12:47\nchar at 15:5\nIdentifier(buffer) at 15:10\n[ at 15:16\nIntLiteral(50, None) at 15:17\n] at 15:19\n; at 15:20\nIdentifier(strcpy) at 16:5\n( at 16:11\nIdentifier(buffer) at 16:12\n, at 16:18\nStringLiteral(\"World\") at 16:20\n) at 16:27\n; at 16:28\nIdentifier(printf) at 17:5\n( at 17:11\nStringLiteral(\"strcpy result: %s\n\") at 17:12\n, at 17:33\nIdentifier(buffer) at 17:35\n) at 17:41\n; at 17:42\nchar at 20:5\n* at 20:10\nIdentifier(str2) at 20:11\n= at 20:16\nStringLiteral(\"Hello\") at 20:18\n; at 20:25\nchar at 21:5\n* at 21:10\nIdentifier(str3) at 21:11\n= at 21:16\nStringLiteral(\"World\") at 21:18\n; at 21:25\nint at 22:5\nIdentifier(cmp1) at 22:9\n= at 22:14\nIdentifier(strcmp) at 22:16\n( at 22:22\nIdentifier(str1) at 22:23\n, at 22:27\nIdentifier(str2) at 22:29\n) at 22:33\n; at 22:34\nint at 23:5\nIdentifier(cmp2) at 23:9\n= at 23:14\nIdentifier(strcmp) at 23:16\n( at 23:22\nIdentifier(str1) at 23:23\n, at 23:27\nIdentifier(str3) at 23:29\n) at 23:33\n; at 23:34\nIdentifier(printf) at 24:5\n( at 24:11\nStringLiteral(\"strcmp(\"%s\", \"%s\") = %d\n\") at 24:12\n, at 24:43\nIdentifier(str1) at 24:45\n, at 24:49\nIdentifier(str2) at 24:51\n, at 24:55\nIdentifier(cmp1) at 24:57\n) at 24:61\n; at 24:62\nIdentifier(printf) at 25:5\n( at 25:11\nStringLiteral(\"strcmp(\"%s\", \"%s\") = %d\n\") at 25:12\n, at 25:43\nIdentifier(str1) at 25:45\n, at 25:49\nIdentifier(str3) at 25:51\n, at 25:55\nIdentifier(cmp2) at 25:57\n) at 25:61\n; at 25:62\nchar at 28:5\nIdentifier(cat_buffer) at 28:10\n[ at 28:20\nIntLiteral(100, None) at 28:21\n] at 28:24\n; at 28:25\nIdentifier(strcpy) at 29:5\n( at 29:11\nIdentifier(cat_buffer) at 29:12\n, at 29:22\nStringLiteral(\"Hello\") at 29:24\n) at 29:31\n; at 29:32\nIdentifier(strcat) at 30:5\n( at 30:11\nIdentifier(cat_buffer) at 30:12\n, at 30:22\nStringLiteral(\" \") at 30:24\n) at 30:27\n; at 30:28\nIdentifier(strcat) at 31:5\n( at 31:11\nIdentifier(cat_buffer) at 31:12\n, at 31:22\nStringLiteral(\"World\") at 31:24\n) at 31:31\n; at 31:32\nIdentifier(printf) at 32:5\n( at 32:11\nStringLiteral(\"strcat result: %s\n\") at 32:12\n, at 32:33\nIdentifier(cat_buffer) at 32:35\n) at 32:45\n; at 32:46\nIdentifier(printf) at 34:5\n( at 34:11\nStringLiteral(\"All string tests passed!\n\") at 34:12\n) at 34:40\n; at 34:41\nreturn at 35:5\nIntLiteral(0, None) at 35:12\n; at 35:13\n} at 36:1\nEOF at 37:1\n"
stderr: ""
status: 0
